--- a/index.html
+++ b/index.html
@@ -5,22 +5,31 @@
 <body>
 
 <style>
- h1 (font-family:arial; font-size:150%; text-align:center;)
- p (font-family:helvetica; font-size:100%)
+ h1 {font-family:arial;font-size:150%;text-align:center;}
+ p {font-family:helvetica;font-size:100%}
  </style>
 
-<h1> Hello World </h1>
+ <div style="background:#cce4ff;color:light blue"> </div>
+ 
+<h1> Lee Frazer - Digital Fabrication and Engineering 2018 </h1>
 <br>
-<p> wiojwoiniufiwehfjcnwec </p>
+<p> 
+<a href="me.html">About me</a>
+</p>
+
 <br>
 
+<p> 
+<a href="week1.html">Week 1</a>
+</p>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/TpCMT_cpQ-w" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-<br>
+<p> 
+<a href="week2.html">Week 2</a>
+</p>
 
-<img src="1.jfif"/>
-
-<a href="https://cleveland.com/"> Cleveland Newspaper </a>
+<p> 
+<a href="week3.html">Week 3</a>
+</p>
 
 </body>
 </html>
