--- a/index.html
+++ b/index.html
@@ -1,18 +1,49 @@
 <html>
-
 <title> Lee Frazer </title>
-
-<body>
-
+<head>
 <style>
+header {
+    background-color:#ffffff;
+    color:black;
+    text-align:center;
+    padding:5px;	 
+}
+nav {
+    line-height:30px;
+    background-color:#ffffff;
+    height:540px;
+    width:70px;
+    float:left;
+    padding:49px;	      
+}
+section {
+    width:320px;
+    float:center;
+    padding:10px;	 	 
+}
+footer {
+    background-color:#ffffff;
+    color:black;
+    text-align:center;
+    padding:15px;	
+}
+body {
+background-image:url('yourpicture.jpg');
+background-repeat:no-repeat;
+background-position:left top;
+width="1280"; height="960";
+background-color:#cce4ff;
+}
  h1 {font-family:arial;font-size:150%;text-align:center;}
  p {font-family:helvetica;font-size:100%}
  </style>
-
- <div style="background:#cce4ff;color:light blue"> </div>
- 
+ </head>
+ <body>
+<header>
 <h1> Lee Frazer - Digital Fabrication and Engineering 2018 </h1>
+
 <br>
+<nav>
 <p> 
 <a href="me.html">About me</a>
 </p>
@@ -29,6 +60,34 @@
 
 <p> 
 <a href="week3.html">Week 3</a>
+</p>
+
+<p> 
+<a href="week4.html">Week 4</a>
+</p>
+
+<p> 
+<a href="week5.html">Week 5</a>
+</p>
+
+<p> 
+<a href="week6.html">Week 6</a>
+</p>
+
+<p> 
+<a href="week7.html">Week 7</a>
+</p>
+
+<p> 
+<a href="week8.html">Week 8</a>
+</p>
+
+<p> 
+<a href="week9.html">Week 9</a>
+</p>
+
+<p> 
+<a href="week10.html">Week 10</a>
 </p>
 
 </body>
