--- a/me.html
+++ b/me.html
@@ -15,6 +15,13 @@ p {font-family:helvetica;font-size:100%;text-align:center;}
 </head>
 <body>
 <h1> About Lee Frazer </h1>
-<p> Hi, this is my website for Digital Engineering and Fabrication. My name is Lee Pierre Boyd Frazer and I am from Chagrin Falls Ohio. I'm not the biggest fan of school but I do enjoy science and math, which will hopefully help me pursue my dreams of becoming an engineer. I am a big fan of sports. I play football, basketball, and lacrosse. My favorite sport is lacrosse since I have been playing since I was in second grade. I also love sleeping and eating. That's all for my about me page! </p>
+<p> Hi, this is my website for Digital Engineering and Fabrication.
+ My name is Lee Pierre Boyd Frazer and I am from Chagrin Falls
+ Ohio. I'm not the biggest fan of school but I do enjoy science 
+ and math, which will hopefully help me pursue my dreams of 
+ becoming an engineer. I am a big fan of sports. I play football, 
+ basketball, and lacrosse. My favorite sport is lacrosse since I 
+ have been playing since I was in second grade. I also love 
+ sleeping and eating. That's all for my about me page! </p>
 </body>
 </html>
