--- a/me.html
+++ b/me.html
@@ -3,10 +3,10 @@
 <head>
 <style>
 body {
-background-image:url('yourpicture.jpg');
+background-image:url('leelax.jpg');
 background-repeat:no-repeat;
 background-position:left top;
-width="860"; height="960";
+width="1280"; height="960";
 background-color:#cce4ff;
 }
 h1 {font-family:arial;font-size:250%;text-align:center;}
