--- a/me.html
+++ b/me.html
@@ -5,7 +5,7 @@
 body {
 background-image:url('leelax.jpg');
 background-repeat:no-repeat;
-background-position:left top;
+background-position:center;
 width="1280"; height="960";
 background-color:#cce4ff;
 }
