--- a/week1.html
+++ b/week1.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body {
-background-image:url('group1.jpg');
+background-image:url('group1.JPG');
 background-repeat:no-repeat;
 background-position:center;
 width="1280"; height="960";
