--- a/week1.html
+++ b/week1.html
@@ -15,6 +15,6 @@ p {font-family:helvetica;font-size:100%;text-align:center;}
 </head>
 <body>
 <h1> Week 1 </h1>
-<img src="group1.jpg"/>
+<img src="group1.JPG" class="center"/>
 </body>
 </html>
