--- a/week1.html
+++ b/week1.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body {
-background-image:url('name.jpg');
+background-image:url('group1.jpg');
 background-repeat:no-repeat;
 background-position:center;
 width="1280"; height="960";
@@ -15,6 +15,5 @@ p {font-family:helvetica;font-size:100%;text-align:center;}
 </head>
 <body>
 <h1> Week 1 </h1>
-<img src="group1.JPG" class="center"/>
 </body>
 </html>
